creusot/tests/should_fail/prusti/logic/sig.stderr
error: invalid home signature, reached "('x)"
 --> sig.rs:4:9
  |
4 | #[logic(('x))]
  |         ^^^^

error: aborting due to 1 previous error

